--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div>
-                <img src="/mission-2022-main/images/person/person-4.png" alt="">
+                <img src="/images/person/person-4.png" alt="">
             </div>
         
     </section>
@@ -41,7 +41,7 @@
         <div class="middle">
             <div class="packet1 card">
                 <div>
-                    <img class="three-img" src="/mission-2022-main/images/illustrators/illustrator-1.png" alt="">
+                    <img class="three-img" src="/images/illustrators/illustrator-1.png" alt="">
                 </div>
                 <div>
                     <h2>Planning</h2>
@@ -51,7 +51,7 @@
             </div>
             <div class="packet2 card">
                 <div>
-                    <img class="three-img" src="/mission-2022-main/images/illustrators/illustrator-2.png" alt="">
+                    <img class="three-img" src="/images/illustrators/illustrator-2.png" alt="">
                 </div>
                 <div>
                     <h2>Achivement</h2>
@@ -61,7 +61,7 @@
             </div>
                 <div class="packet3 card">
                     <div>
-                        <img class="three-img" src="/mission-2022-main/images/illustrators/illustrator-3.png" alt="">
+                        <img class="three-img" src="/images/illustrators/illustrator-3.png" alt="">
                     </div>
                     <div>
                         <h2>Distination</h2>
@@ -75,7 +75,7 @@
     <section>
         <div class="third-div">
             <div>
-                <img  class="two-img" src="/mission-2022-main/images/pictures/coding.png" alt="">
+                <img  class="two-img" src="/images/pictures/coding.png" alt="">
             </div>
             <div class="limits2">
                 <h1>Develop Your skills</h1>
@@ -94,12 +94,12 @@
                 
             </div>
             <div class="two-img2">
-                <img src="/mission-2022-main/images/pictures/project.png" alt="">
+                <img src="/images/pictures/project.png" alt="">
             </div>
         </div>
         <section class="corona-section">
             <div class="img4">
-                <img src="/mission-2022-main/corona.png" alt="">
+                <img src="/images/corona.png" alt="">
             </div>
             <div class="corona-para">
                  <h1>Stay Safe With Communicated</h1>
